lib/stratiform/res/test/stratiform/corpus/neg/e206-layer-variant-overlap.tel
tel 1.0 https://tel-lang.org/schema/tel-schema

name e208-test

document
  field name string

layer
  name extension
  overlay
    select
      variant name flag
      variant other flag
